Updated webpack config from DataPortal. Updated npm packages to latest versions of Webpack, kept Angular 1.6. ignoring dist folder. Imported styling from DataPortal.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </p>
         </div>
     </div>
-    <script src="bundle.js"></script>
+    <script src="dist/vendors.bundle.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
